# SDL-Library

./: CMakeLists.txt  README.md  main.cpp
src/: SDL.cpp  SDL.hpp  color_functions.cpp  color_functions.hpp  complex_functions.cpp  complex_functions.hpp  mainLib.cpp  mainLib.hpp
